[gd_scene load_steps=3 format=3 uid="uid://bldeapu4qf5vg"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_ppw0l"]
[ext_resource type="Script" path="res://ability_info.gd" id="2_g68wf"]

[node name="AbilityInfo" type="PanelContainer" node_paths=PackedStringArray("name_label", "level_label", "type_label", "damage_label", "cooldown_label", "range_label", "pierce_label", "level_up_button")]
custom_minimum_size = Vector2(400, 0)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ppw0l")
script = ExtResource("2_g68wf")
name_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/NameLabel")
level_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/LevelLabel")
type_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/TypeLabel")
damage_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/DamageLabel")
cooldown_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/CooldownLabel")
range_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/RangeLabel")
pierce_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/PierceLabel")
level_up_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "I'm Gonna ****ing Shoot Up A"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"TextSmall"
text = "Lv.0"
vertical_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
text = "Type"

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
text = "Damage"

[node name="CooldownLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
text = "Cooldown"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RangeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
text = "Range"

[node name="PierceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
text = "Pierce"

[node name="LevelUpButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "+"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
